add train_trip endpoint
