# swagger.yml
@@ -16,6 +16,8 @@ tags:
     description: "Autocomplete for train vehicles."
   - name: "Train vehicle"
     description: "Get information about a train vehicle."
+  - name: "Train trip"
+    description: "Get information about a train trip. (e.g. ICE 1565)"
   - name: "Station search"
     description: "Search/autocomplete api for station search."
 
@@ -138,6 +140,78 @@ paths:
                     type: string
                     description: "Error text"
                     example: "Train vehicle doesn't exist."
+  /v1/train_trip:
+    get:
+      operationId: "Train trip v1"
+      tags: ["Train trip"]
+      parameters:
+        - name: "train_number"
+          in: "query"
+          required: true
+          schema:
+            type: integer
+        - name: "train_type"
+          in: "query"
+          required: false,
+          schema:
+            type: string
+            default: "ICE"
+        - name: "trip_limit"
+          in: "query"
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: "include_marudor_link"
+          in: "query"
+          required: false
+          schema:
+            type: boolean
+            default: false
+        - name: "include_routes"
+          in: "query"
+          required: false
+          schema:
+            type: boolean
+            default: true
+        - name: "include_train_vehicle"
+          in: "query"
+          required: false
+          schema:
+            type: boolean
+            default: true
+        - name: "coach_sequence_limit"
+          in: "query"
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: "include_coaches"
+          in: "query"
+          required: false
+          schema:
+            type: boolean
+            default: true
+      responses:
+        200:
+          description: "List of train trips ordered by departure (desc)."
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/TrainTrip"
+        404:
+          description: "Train trip doesn't exist."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: "Error text"
+                    example: "Train trip doesn't exist."
   /train_vehicle:
     get:
       deprecated: true
@@ -300,7 +374,7 @@ components:
           type: integer
           deprecated: true
         train_number:
-          type: string
+          type: integer
         train_type:
           type: string
         origin_station:
@@ -320,7 +394,11 @@ components:
           format: date-time
         marudor:
           type: string
-          description: Marudor link to train trip. Enable by setting include_marudor_link to true.
+          description: "Marudor link to train trip. Enable by setting include_marudor_link to true. This value can be null. (e.g. IC's [except IC2])"
+        train_vehicle:
+          description: "Not available at train_vehicle endpoint. Enable this attribute by setting include_train_vehicle to true."
+          $ref: "#/components/schemas/TrainVehicle"
+          nullable: true
         stops:
           type: array
           items:
